2004-06-06  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.override (_wrap_gdk_event_tp_setattr): Add
	GDK_PROPERTY_NOTIFY attributes.

2004-06-04  Johan Dahlin  <johan@gnome.org>

	* gobjectmodule.c (pyg_param_spec_getattr): Add support for
	paramspec.default_value for GParamSpec types that support it
	
2004-06-04  Lorenzo Gil Sanchez  <lgst@cvs.gnome.org>

	* gobjectmodule.c (initgobject): added gobject.TYPE_UNICHAR

2004-06-04  Johan Dahlin  <johan@gnome.org>

	* gtk/gtkwidget.override (_wrap_gtk_widget_class_install_style_property): Impl

	* gtk/gtkcontainer.override
	(_wrap_gtk_container_class_list_child_properties): Rename first
	kwlist argument to klass (from widget), class should be a
	GObjectClass and not a GtkWidgetClass
	(_wrap_gtk_container_class_install_child_property): Impl.

	* gtk/gtk.defs: Change a couple of methods to functions and set
	correct class

	* pygobject.h: Add pyg_param_spec_from_object

	* gobjectmodule.c (create_property): Don't install the property
	here, return it instead. And don't require a GObjectClass as argument
	(pyg_param_spec_from_object): New function
	(add_properties): Update to new create_property
	(pygobject_api_functions): Export pyg_param_spec_from_object

	* gtk/gtkcontainer.override
	(_wrap_gtk_container_class_list_child_properties): Implement for Lorenzo.

	* gtk/gdk.override (_wrap_gdk_event_tp_setattr): Fix up *_CHECK calls

	* examples/gtk/widget.py: Add a new example of subclassing a GtkWidget.

	* Makefile.am (EXTRA_DIST): Add widget.py

	* pygobject.c (pygobject_new): guard object_ref call

	* examples/gtk/uimanager.py: Some more polishing, it'll never be finished!

	* gtk/gtkwidget.override (_wrap_gtk_widget__set_allocation): Impl.
	(_wrap_gtk_widget__set_window): Impl.

	* gtk/gtkclist.override (_wrap_gtk_clist_new_with_titles): put
	all clist overrides here.

	* gtk/gtk.override (_wrap_gtk_paint_polygon): Move gtk_widgets_*
	ignore definitions to gtkwidget.override and clist_* to
	gtkclist.override