@@ -1,3 +1,9 @@
+2004-06-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>
+
+	* examples/gtk/widget.py: Don't manually send configure events.
+	Instead, override size-request, taking the exact size of the text
+	and border width into consideration.
+
 2004-06-06  Johan Dahlin  <johan@gnome.org>
 
 	* gtk/gdk.override (_wrap_gdk_event_tp_setattr): Add
